--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav a:hover {
 #hero {
   width: 100%;
   height: 70vh; /* 70% of the viewport height */
-  background-image: url('images/hero-bg1.jpg');
+  background-image: url('hero-bg1.jpg');
   background-size: cover;
   background-position: center;
   position: relative;
